add database details to liquibase.properties file

--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,1 +1,5 @@
 changeLogFile=src/main/resources/db/changelog/db.changelog-master.yml
+url=jdbc:postgresql://localhost:5432/point_of_sale
+username=admin
+password=postgres
+driver=org.postgresql.Driver
