--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,4 +1,4 @@
-changeLogFile=src/main/resources/db/changelog/db.changelog-master.yml
+changeLogFile=src/main/resources/db/changelog/db.changelog-master.xml
 url=jdbc:postgresql://localhost:5432/point_of_sale
 username=admin
 password=postgres
