--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/point_of_sale
+spring.datasource.username=admin
+spring.datasource.password=postgres
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
