--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,12 @@
+spring:
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/point_of_sale
+    username: admin
+    password: postgres
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master.xml
+
 payment-method-modifiers:
   cash:
     points-multiplier: 0.05
