--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/point_of_sale
-    username: admin
+    username: postgres
     password: postgres
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.xml
