--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,5 +1,5 @@
 changeLogFile=src/main/resources/db/changelog/db.changelog-master.xml
 url=jdbc:postgresql://localhost:5432/point_of_sale
-username=admin
+username=postgres
 password=postgres
 driver=org.postgresql.Driver
