--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
 	</properties>
 
 	<dependencies>
+		<!--		todo: remove this dependency after test-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
@@ -48,6 +53,11 @@
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
 			<version>3.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
 		</dependency>
 
 		<!-- testing -->
@@ -132,9 +142,6 @@
 					<includes>
 						<include>**/*IT.java</include>
 					</includes>
-					<testSourceDirectory>
-						${project.basedir}/src/integration-test/java/com/genezeiniss/pos_transaction_processor/
-					</testSourceDirectory>
 					<argLine>-XX:+EnableDynamicAgentLoading</argLine>
 				</configuration>
 				<executions>
