--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/point_of_sale
-    username: postgres
-    password: postgres
+    username: ${DB_USERNAME:postgres}
+    password: ${DB_PASSWORD:postgres}
     hikari:
       maximum-pool-size: 30     # todo: change based on DB max connections / expected concurrency
       minimum-idle: 10
